PROJECT(kmodtest)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)


SET(KERNEL_SRC ${KERNEL_SRC})
IF(KERNEL_SRC)
    STRING(STRIP ${KERNEL_SRC} KERNEL_SRC)
    MESSAGE("KERNEL_SRC = ${KERNEL_SRC}")
ELSE()
    MESSAGE("KERNEL_SRC UNDEFINED")
ENDIF()

ADD_SUBDIRECTORY(kmod)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(test)
